--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,6 +10,20 @@ layout: default
   <h1>{{ page.title }}</h1>
 </header>
 
+<p>
+<em>
+  {{ page.role }},
+  {{ page.begin_year }}
+    {% unless page.begin_year == page.end_year %} -
+      {% if page.end_year %}
+        {{ page.end_year }}
+      {% else %}
+        present
+      {% endif %}
+    {% endunless %}
+</em>
+</p>
+
 <section markdown="1">
 {{ content }}
 </section>
