--- a/_layouts/resource.html
+++ b/_layouts/resource.html
@@ -4,19 +4,21 @@ layout: default
 
 <header>
   <nav>
-    {{ page.url }}
+    {% if page.path == 'index.md' %}
+      &nbsp;
+    {% elsif page.parent_name %}
+      <a href="/">gregoryjscott</a> / <a href="{{ page.parent_url }}">{{ page.parent_name }}</a> / {{ page.resource_name }}
+    {% else %}
+      <a href="/">gregoryjscott</a> / {{ page.resource_name }}
+    {% endif %}
   </nav>
 
   <h1>{{ page.title }}</h1>
 </header>
 
-<section markdown="1">
 {{ content }}
-</section>
 
-<section markdown="1">
 {% include links.md resource=page %}
-</section>
 
 {% if page.items %}
   {% for item in page.items %}
