--- a/_layouts/db.html
+++ b/_layouts/db.html
@@ -10,6 +10,8 @@ layout: default
   <h1>{{ page.title }}</h1>
 </header>
 
+<p><em>{{ page.subtitle }}</em></p>
+
 <article>
 {{ content }}
 </article>
