Only enable db links

--- a/_includes/links-stack-item.html
+++ b/_includes/links-stack-item.html
@@ -1,4 +1,4 @@
 {% if include.links %}
   <h2>{{ include.title }}</h2>
-  {% include links-with-commas.md links=include.links %}
+  {% include links-with-commas.md links=include.links disabled=include.disabled %}
 {% endif %}
