--- a/_includes/links-stack.html
+++ b/_includes/links-stack.html
@@ -2,8 +2,8 @@
   {% include links-stack-item.html title="Work" links=include.links.work %}
   {% include links-stack-item.html title="Skills" links=include.links.skills %}
   {% include links-stack-item.html title="Contact" links=include.links.contact %}
-  {% include links-stack-item.html title="Projects" links=include.links.projects %}
-  {% include links-stack-item.html title="Languages" links=include.links.languages %}
+  {% include links-stack-item.html title="Projects" links=include.links.projects disabled=true %}
+  {% include links-stack-item.html title="Languages" links=include.links.languages disabled=true %}
   {% include links-stack-item.html title="Databases" links=include.links.db %}
-  {% include links-stack-item.html title="Operating Systems" links=include.links.os %}
+  {% include links-stack-item.html title="Operating Systems" links=include.links.os disabled=true %}
 {% endif %}
