--- a/_layouts/language.html
+++ b/_layouts/language.html
@@ -10,10 +10,12 @@ layout: default
   <h1>{{ page.title }}</h1>
 </header>
 
-<section markdown="1">
+<p><em>{{ page.subtitle }}</em></p>
+
+<article>
 {{ content }}
-</section>
+</article>
 
 <section markdown="1">
-{% include links.md resource=page %}
+{% include links-stack.html links=page.links %}
 </section>
