--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -24,10 +24,10 @@ layout: default
 </em>
 </p>
 
-<section markdown="1">
+<article>
 {{ content }}
-</section>
+</article>
 
 <section markdown="1">
-{% include links.md resource=page %}
+{% include links-stack.html links=page.links %}
 </section>
