Enable os links

--- a/_includes/links-stack.html
+++ b/_includes/links-stack.html
@@ -5,5 +5,5 @@
   {% include links-stack-item.html title="Projects" links=include.links.projects disabled=true %}
   {% include links-stack-item.html title="Languages" links=include.links.languages disabled=true %}
   {% include links-stack-item.html title="Databases" links=include.links.db %}
-  {% include links-stack-item.html title="Operating Systems" links=include.links.os disabled=true %}
+  {% include links-stack-item.html title="Operating Systems" links=include.links.os %}
 {% endif %}
