Enable language links

--- a/_includes/links-stack.html
+++ b/_includes/links-stack.html
@@ -3,7 +3,7 @@
   {% include links-stack-item.html title="Skills" links=include.links.skills %}
   {% include links-stack-item.html title="Contact" links=include.links.contact %}
   {% include links-stack-item.html title="Projects" links=include.links.projects disabled=true %}
-  {% include links-stack-item.html title="Languages" links=include.links.languages disabled=true %}
+  {% include links-stack-item.html title="Languages" links=include.links.languages %}
   {% include links-stack-item.html title="Databases" links=include.links.db %}
   {% include links-stack-item.html title="Operating Systems" links=include.links.os %}
 {% endif %}
