Assume page data will have _links not links

--- a/_includes/links-stack.html
+++ b/_includes/links-stack.html
@@ -1,9 +1,9 @@
-{% if include.links %}
-  {% include links-stack-item.html title="Work" links=include.links.work %}
-  {% include links-stack-item.html title="Skills" links=include.links.skills %}
-  {% include links-stack-item.html title="Contact" links=include.links.contact %}
-  {% include links-stack-item.html title="Projects" links=include.links.projects %}
-  {% include links-stack-item.html title="Languages" links=include.links.languages %}
-  {% include links-stack-item.html title="Databases" links=include.links.db %}
-  {% include links-stack-item.html title="Operating Systems" links=include.links.os %}
+{% if include.data._links %}
+  {% include links-stack-item.html title="Work" links=include.data._links.work %}
+  {% include links-stack-item.html title="Skills" links=include.data._links.skills %}
+  {% include links-stack-item.html title="Contact" links=include.data._links.contact %}
+  {% include links-stack-item.html title="Projects" links=include.data._links.projects %}
+  {% include links-stack-item.html title="Languages" links=include.data._links.languages %}
+  {% include links-stack-item.html title="Databases" links=include.data._links.db %}
+  {% include links-stack-item.html title="Operating Systems" links=include.data._links.os %}
 {% endif %}
