--- a/_layouts/language.html
+++ b/_layouts/language.html
@@ -17,5 +17,5 @@ layout: default
 </article>
 
 <section markdown="1">
-{% include links-stack.html links=page.links %}
+{% include links-stack.html data=page %}
 </section>
