--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -29,5 +29,5 @@ layout: default
 </article>
 
 <section markdown="1">
-{% include links-stack.html links=page.links %}
+{% include links-stack.html data=page %}
 </section>
