Try some different style

--- a/_includes/links-stack.html
+++ b/_includes/links-stack.html
@@ -1,7 +1,7 @@
 {% if include.data._links %}
   {% if include.data._links.recommend %}
     {% assign link = include.data._links.recommend %}
-    <a href="{{ link.href }}">{{ link.title }}</a>
+    <a class="button" href="{{ link.href }}">{{ link.title }}</a>
   {% endif %}
   {% include links-stack-item.html title="Work" links=include.data._links.work %}
   {% include links-stack-item.html title="Skills" links=include.data._links.skills %}
