--- a/css/site.css
+++ b/css/site.css
@@ -7,7 +7,7 @@ body {
   padding: 1em 1em 2em 1em;
   margin: 0 auto;
   max-width: 800px;
-  color: #333333;
+  color: #404040;
 }
 
 p {
@@ -31,6 +31,10 @@ h2 {
   margin: 2.5em 0 1em 0;
 }
 
+h3 {
+  margin: 2.2em 0 1em 0;
+}
+
 header {
   padding-bottom: 2em;
 }
@@ -47,30 +51,30 @@ article {
 a.button {
   border-style: solid;
   border-width: 2px;
-  border-color: #555555;
-  border-radius: 5px;
-  color: #555555;
+  border-color: #b3b3b3;
+  border-radius: 10px;
+  color: #b3b3b3;
   width: 300px;
-  padding: 20px;
+  padding: 10px;
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
   background-color: white;
   display: inline-block;
-  margin: 1em 100px;
+  margin: 1em 100px 0.5em 100px;
 }
 
 a.button:hover {
   color: white;
-  background-color: #555555;
+  background-color: #b3b3b3;
 }
 
 a.button.recommend {
-  border-color: green;
-  color: green;
+  border-color: #f36557;
+  color: #f36557;
 }
 
 a.button.recommend:hover {
   color: white;
-  background-color: green;
+  background-color: #f36557;
 }
