--- a/css/site.css
+++ b/css/site.css
@@ -56,6 +56,7 @@ a.button {
   color: #b3b3b3;
   width: 300px;
   padding: 10px;
+  font-size: 0.8em;
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
