--- a/_layouts/db.html
+++ b/_layouts/db.html
@@ -10,11 +10,7 @@ layout: default
   <h1>{{ page.title }}</h1>
 </header>
 
-<p><em>{{ page.subtitle }}</em></p>
-
-<article>
-{{ content }}
-</article>
+<p>{{ page.desc }}</p>
 
 <section markdown="1">
 {% include links-stack.html data=page %}
