--- a/_layouts/os.html
+++ b/_layouts/os.html
@@ -10,12 +10,29 @@ layout: default
   <h1>{{ page.title }}</h1>
 </header>
 
-<p><em>{{ page.subtitle }}</em></p>
+<p>{{ page.desc }}</p>
 
-<article>
-{{ content }}
-</article>
+{% if page._embedded.projects %}
+  <h1>Projects</h1>
+  <section>
+    {% for item in page._embedded.projects %}
+      <h2>{{ item.title }}</h2>
 
-<section markdown="1">
-{% include links-stack.html data=page %}
-</section>
+      <p>
+        <em>
+          {{ item.role }},
+          {{ item.begin_year }}
+          {% unless item.begin_year == item.end_year %} -
+            {% if item.end_year %}
+              {{ item.end_year }}
+            {% else %}
+              present
+            {% endif %}
+          {% endunless %}
+        </em>
+      </p>
+
+      {% include links-ul.html data=item %}
+    {% endfor %}
+  </section>
+{% endif %}
