--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,24 +10,17 @@ layout: default
   <h1>{{ page.title }}</h1>
 </header>
 
-<p>
-<em>
-  {{ page.role }},
-  {{ page.begin_year }}
-    {% unless page.begin_year == page.end_year %} -
-      {% if page.end_year %}
-        {{ page.end_year }}
-      {% else %}
-        present
-      {% endif %}
-    {% endunless %}
-</em>
-</p>
+<p>{{ page.desc }}</p>
 
-<article>
-{{ content }}
-</article>
+{% if page._embedded.languages %}
+  <h1>Languages</h1>
+  <section>
+    {% for item in page._embedded.languages %}
+      <h2>{{ item.title }}</h2>
 
-<section markdown="1">
-{% include links-stack.html data=page %}
-</section>
+      <p>{{ item.desc }}</p>
+
+      {% include links-ul.html data=item %}
+    {% endfor %}
+  </section>
+{% endif %}
