Vary the font sizes and colors

--- a/_includes/links-commas.html
+++ b/_includes/links-commas.html
@@ -3,7 +3,7 @@
     {% if include.disabled %}
       {{ link.title }}{% unless forloop.last %},{% endunless %}
     {% else %}
-      <a href="{{ link.href }}">{{ link.title }}</a>{% unless forloop.last %},{% endunless %}
+      <a class="resource-links" href="{{ link.href }}">{{ link.title }}</a>{% unless forloop.last %},{% endunless %}
     {% endif %}
   {% endfor %}
 {% endif %}
