--- a/css/site.css
+++ b/css/site.css
@@ -30,10 +30,12 @@ h1 {
 
 h2 {
   margin: 2.5em 0 1em 0;
+  font-weight: 700;
 }
 
 h3 {
   margin: 2.2em 0 1em 0;
+  font-weight: 700;
 }
 
 header {
