--- a/css/site.css
+++ b/css/site.css
@@ -45,6 +45,11 @@ header h1 {
   margin: 1.8em 0 1.2em 0;
 }
 
+nav {
+  color: #b3b3b3;
+  font-weight: bold;
+}
+
 a {
   color: #404040;
 }
@@ -53,12 +58,12 @@ a:visited {
   color: #404040;
 }
 
-nav, a.resource-links {
+nav a, p a, a.resource-links {
   color: #b3b3b3;
   font-weight: bold;
 }
 
-nav a:visited, a.resource-links:visited {
+nav a:visited, p a:visited, a.resource-links:visited {
   color: #b3b3b3;
 }
 
