--- a/css/site.css
+++ b/css/site.css
@@ -73,15 +73,15 @@ a.button {
   border-color: #b3b3b3;
   border-radius: 10px;
   color: #b3b3b3;
-  width: 250px;
-  padding: 5px;
+  padding: 5px 15px;
+  min-width: 250px;
   font-size: 0.8em;
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
   background-color: white;
   display: inline-block;
-  margin: 1em 100px 0.5em 100px;
+  margin: 1em;
 }
 
 a.button:hover {
