--- a/css/site.css
+++ b/css/site.css
@@ -111,3 +111,12 @@ article ul {
 article il {
   margin: 1em;
 }
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 6em 0 0 0;
+  padding: 0;
+}
