Add get started section to every item page

--- a/_layouts/db.html
+++ b/_layouts/db.html
@@ -36,3 +36,9 @@ layout: default
     {% endfor %}
   </section>
 {% endif %}
+
+<hr>
+
+<section markdown="1">
+  {% include get-started.md %}
+</section>
