--- a/_layouts/language.html
+++ b/_layouts/language.html
@@ -36,3 +36,9 @@ layout: default
     {% endfor %}
   </section>
 {% endif %}
+
+<hr>
+
+<section markdown="1">
+  {% include get-started.md %}
+</section>
