--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,3 +15,9 @@ layout: default
 <section markdown="1">
 {% include links-stack.html data=page %}
 </section>
+
+<hr>
+
+<section markdown="1">
+  {% include get-started.md %}
+</section>
