--- a/css/site.css
+++ b/css/site.css
@@ -74,7 +74,7 @@ a.button {
   border-radius: 10px;
   color: #b3b3b3;
   padding: 5px 15px;
-  min-width: 250px;
+  min-width: 20em;
   font-size: 0.8em;
   font-weight: bold;
   text-transform: uppercase;
