--- a/_layouts/db.html
+++ b/_layouts/db.html
@@ -39,6 +39,12 @@ layout: default
 
 <hr>
 
+<h1>Find out more about me.</h1>
+
+<a class="button" href="/work/">Check out my work.</a>
+<a class="button" href="/skills/">Explore my skills.</a>
+<a class="button recommend" href="/services/">Learn what I can do for you.</a>
+
 <section markdown="1">
   {% include get-started.md %}
 </section>
