Just put find out more in footers

--- a/_layouts/language.html
+++ b/_layouts/language.html
@@ -39,6 +39,8 @@ layout: default
 
 <hr>
 
-<section markdown="1">
-  {% include get-started.md %}
-</section>
+<h1>Find out more about me.</h1>
+
+<a class="button" href="/work/">Check out my work.</a>
+<a class="button" href="/skills/">Explore my skills.</a>
+<a class="button recommend" href="/services/">Learn what I can do for you.</a>
